Tue Dec  9 14:39:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/sql2tds.c:
	- fixed problem with Ruby and ODBC

Tue Dec  9 11:18:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsstring.h src/apps/freebcp.c src/odbc/native.c:
	* src/odbc/odbc.c src/pool/config.c src/tds/config.c:
	- remove some severe warnings

Mon Dec  8 12:03:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove some warnings

Mon Dec  8 11:36:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: type and some fix for DSN-less configuration

Mon Dec  8 02:30:24 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/userguide.sgml doc/userguide.dsl.in
	- Prepare UG for 0.62 release.  Added ODBC chapter.  
	- Still needs integration with reference manual.  

Sun Dec  7 14:19:12 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/descriptor.c: small optimization
	* src/odbc/odbc.c src/odbc/sql2tds.c:
	- comments and a workaround
	* src/tds/login.c src/tds/query.c:
	- let tds_quote_id accept -1 as length (zero terminated)

Sun Dec  7 02:32:19 PST 2003	Peter Deacon <peterd@iea-software.com>
	* include/tds.h src/odbc/descriptor.c src/odbc/odbc.c:
	* src/tds/login.c src/tds/query.c:
	- fixed unchecked memory allocation
	- fixed wrong value for SQL_DESC_LOCAL_TYPE_NAME
	- fixed setting SQL_ATTR_CURRENT_CATALOG failed

Sun Dec  7 01:09:42 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/numeric.c fixed tds_money_to_string: s/0.%02f/%.02f/
	
Sat Dec  6 23:50:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- make tds_skip_comment static
	- fix parsing of "... /*" and "/* ... */* ... */"

Sat Dec  6 13:08:36 PST 2003	Peter Deacon <peterd@iea-software.com>
	* include/tds.h src/tds/query.c src/odbc/odbc.c:
	- fixed don't look for placeholders in comments
	- bad assert numresults between prepare and exec
	* src/tds/mem.c src/tds/token.c: