@@ -1,3 +1,6 @@
+Tue Dec  9 11:49:19 EST 2003	JK Lowden <jklowden@schemamania.org>
+	* include/replacements.h add vsnprintf prototype
+
 Tue Dec  9 14:39:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c src/odbc/sql2tds.c:
 	- fixed problem with Ruby and ODBC
